fix: stop firing during reward selection

--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
         }
 
         window.addEventListener("click", (e) => {
-          if (currentBalls.length > 0 || gameOver) return;
+          if (currentBalls.length > 0 || gameOver || getComputedStyle(rewardOverlay).display !== "none") return;
           if (ammo.length + specialAmmo.length <= 0) {
             reload();
             return;
@@ -791,7 +791,7 @@
         window.addEventListener("touchstart", (e) => {
           if (e.touches.length !== 1) return;
           e.preventDefault();
-          if (currentBalls.length > 0 || gameOver) return;
+          if (currentBalls.length > 0 || gameOver || getComputedStyle(rewardOverlay).display !== "none") return;
           if (ammo.length + specialAmmo.length <= 0) {
             reload();
             return;
