--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=1280,user-scalable=yes" />
-  <title>ギャルペグリンっぽゲーム💕</title>
+  <title>Peggy Girls</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
   <body>
   <div id="container">
     <div id="menu-overlay">
       <div id="main-menu">
+        <h1 id="game-title">Peggy Girls</h1>
         <button id="start-button" class="menu-option">スタート</button>
         <button id="upgrade-menu-button" class="menu-option">アップグレード</button>
         <button id="reset-progress" class="menu-option">進捗リセット</button>
