feat: add ball leveling system

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div id="player-hp-bar">
         <div id="player-hp-fill"></div>
       </div>
-      <div id="ammo-text">弾: <span id="ammo-value"></span></div>
+      <div id="ammo-text">弾: <span id="ammo-value" class="ammo-value"></span></div>
     </div>
     <div id="game-wrapper">
       <svg id="aim-svg" width="880" height="700" style="position:absolute;top:0;left:0;z-index:5;"></svg>
