feat: add random events and progress bar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
   <body>
   <div id="container">
+    <div id="progress-bar"><div id="progress-fill"></div></div>
     <div id="menu-overlay">
       <div id="main-menu">
         <h1 id="game-title">Peggy Girls</h1>
@@ -52,6 +53,10 @@
       <button class="reward-button" data-type="split">分裂ボール</button>
       <button class="reward-button" data-type="heal">回復ボール</button>
       <button class="reward-button" data-type="big">デカボール</button>
+    </div>
+    <div id="event-overlay">
+      <h2 id="event-message"></h2>
+      <button id="event-continue-button">OK</button>
     </div>
     <div id="xp-overlay">
       <h2>経験値GET! +<span id="xp-gained">0</span></h2>
