feat: show progress with dots

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
   <body>
   <div id="container">
-    <div id="progress-bar"><div id="progress-fill"></div></div>
+    <div id="progress-indicator">●→○→○</div>
     <div id="menu-overlay">
       <div id="main-menu">
         <h1 id="game-title">Peggy Girls</h1>
