feat: highlight random events

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       <button class="reward-button" data-type="big">デカボール</button>
     </div>
     <div id="event-overlay">
-      <h2 id="event-message"></h2>
+      <h2 id="event-title">ランダムイベント発生☆</h2>
+      <p id="event-message"></p>
       <button id="event-continue-button">OK</button>
     </div>
     <div id="xp-overlay">
