--- a/index.html
+++ b/index.html
@@ -92,6 +92,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
-  <script src="game.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
