Add upgrade back button and block shooting on overlays

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div id="xp-display">経験値: <span id="xp-value">0</span></div>
         <button id="upgrade-hp">HPアップ(+10) 10XP</button>
         <button id="upgrade-atk">攻撃アップ(+10%) 10XP</button>
+        <button id="upgrade-back">戻る</button>
       </div>
     </div>
     <div id="player-hp-container">
