feat: add interactive random events

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div id="event-overlay">
       <h2 id="event-title">ランダムイベント発生☆</h2>
       <p id="event-message"></p>
-      <button id="event-continue-button">OK</button>
+      <div id="event-options"></div>
     </div>
     <div id="xp-overlay">
       <h2>経験値GET! +<span id="xp-gained">0</span></h2>
