Add coin pickups

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div id="player-hp-fill"></div>
       </div>
       <div id="ammo-text">弾: <span id="ammo-value" class="ammo-value"></span></div>
+      <div id="coin-counter"><img id="coin-icon" src="image/coin.png" alt="coin"><span id="coin-value">0</span></div>
     </div>
     <div id="game-wrapper">
       <ol id="progress-indicator"></ol>
