feat: add shop overlay

--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
       <p id="event-message"></p>
       <div id="event-options"></div>
     </div>
+    <div id="shop-overlay">
+      <h2>ショップだよ☆</h2>
+      <div id="shop-options"></div>
+      <button id="shop-close">やめる</button>
+    </div>
     <div id="xp-overlay">
       <h2>経験値GET! +<span id="xp-gained">0</span></h2>
       <button id="xp-continue-button">メニューへ</button>
