chore: add bomb icon asset

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button id="upgrade-atk">攻撃アップ(+10%) 10XP</button>
         <button id="upgrade-back">戻る</button>
       </div>
+      <button id="credit-button">クレジット</button>
     </div>
     <div id="player-hp-container">
       <div id="player-hp-text">HP: <span id="player-hp-value">100</span> / <span id="player-hp-max">100</span></div>
@@ -76,6 +77,10 @@
       <button id="game-over-retry-button">リトライ</button>
     </div>
     <div id="reload-overlay">リロード中…</div>
+    <div id="credit-overlay">
+      <p>Bomb icon by Freepik - Flaticon</p>
+      <button id="credit-close">閉じる</button>
+    </div>
   </div>
 
   <div id="version-history">
