--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <div id="reload-overlay">リロード中…</div>
     <div id="credit-overlay">
       <p>Bomb icon by Freepik - Flaticon</p>
+      <p><a href="https://www.flaticon.com/free-icons/coin" title="coin icons">Coin icons created by popo2021 - Flaticon</a></p>
       <button id="credit-close">閉じる</button>
     </div>
   </div>
