--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <div id="credit-overlay">
       <p>Bomb icon by Freepik - Flaticon</p>
       <p><a href="https://www.flaticon.com/free-icons/coin" title="coin icons">Coin icons created by popo2021 - Flaticon</a></p>
+      <p><a href="https://www.flaticon.com/free-icons/heart" title="heart icons">Heart icons created by Fathema Khanom - Flaticon</a></p>
       <button id="credit-close">閉じる</button>
     </div>
   </div>
