feat: show coins rewarded

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
     </div>
     <div id="reward-overlay">
       <h2>ご褒美ボール選んでね💖</h2>
+      <div id="reward-coins">
+        <img src="image/coin.png" alt="coin">
+        <span id="reward-coin-value">0</span>コインGET☆
+      </div>
       <button class="reward-button" data-type="split">スプリットボール</button>
       <button class="reward-button" data-type="heal">回復ボール</button>
       <button class="reward-button" data-type="big">ビッグボール</button>
