--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
       <p>Bomb icon by Freepik - Flaticon</p>
       <p><a href="https://www.flaticon.com/free-icons/coin" title="coin icons">Coin icons created by popo2021 - Flaticon</a></p>
       <p><a href="https://www.flaticon.com/free-icons/heart" title="heart icons">Heart icons created by Fathema Khanom - Flaticon</a></p>
+      <p><a href="https://www.flaticon.com/free-icons/bowling" title="bowling icons">Bowling icons created by smashingstocks - Flaticon</a></p>
+      <p><a href="https://www.flaticon.com/free-icons/pet" title="pet icons">Pet icons created by Ylivdesign - Flaticon</a></p>
       <button id="credit-close">閉じる</button>
     </div>
   </div>
