--- a/index.html
+++ b/index.html
@@ -53,14 +53,17 @@
       <button id="retry-button">リトライ</button>
     </div>
     <div id="reward-overlay">
-      <h2>ご褒美ボール選んでね💖</h2>
+      <h2 id="result-title">リザルト</h2>
       <div id="reward-coins">
         <img src="image/coin.png" alt="coin">
-        <span id="reward-coin-value">0</span>コインGET☆
+        <span id="reward-coin-value">0</span>コインGET
       </div>
-      <button class="reward-button" data-type="split">スプリットボール</button>
-      <button class="reward-button" data-type="heal">回復ボール</button>
-      <button class="reward-button" data-type="big">ビッグボール</button>
+      <p id="reward-message">報酬ボールを選んでね</p>
+      <div id="reward-buttons">
+        <button class="reward-button" data-type="split">◯</button>
+        <button class="reward-button" data-type="heal">◯</button>
+        <button class="reward-button" data-type="big">◯</button>
+      </div>
     </div>
     <div id="event-overlay">
       <h2 id="event-title">ランダムイベント発生☆</h2>
