Add images to reward buttons

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <img src="image/coin.png" alt="coin">
         <span id="reward-coin-value">0</span>コインGET☆
       </div>
-      <button class="reward-button" data-type="split">スプリットボール</button>
-      <button class="reward-button" data-type="heal">回復ボール</button>
-      <button class="reward-button" data-type="big">ビッグボール</button>
+      <button class="reward-button" data-type="split"><img src="image/split_ball.png" alt="スプリットボール">スプリットボール</button>
+      <button class="reward-button" data-type="heal"><img src="image/recovery_ball.png" alt="回復ボール">回復ボール</button>
+      <button class="reward-button" data-type="big"><img src="image/big_ball.png" alt="ビッグボール">ビッグボール</button>
     </div>
     <div id="event-overlay">
       <h2 id="event-title">ランダムイベント発生☆</h2>
