feat: add reward button images

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       </div>
       <p id="reward-message">報酬ボールを選んでね</p>
       <div id="reward-buttons">
-        <button class="reward-button" data-type="split">◯</button>
-        <button class="reward-button" data-type="heal">◯</button>
-        <button class="reward-button" data-type="big">◯</button>
+        <button class="reward-button" data-type="split"><img src="image/split_ball.png" alt="スプリットボール">スプリットボール</button>
+        <button class="reward-button" data-type="heal"><img src="image/recovery_ball.png" alt="回復ボール">回復ボール</button>
+        <button class="reward-button" data-type="big"><img src="image/big_ball.png" alt="ビッグボール">ビッグボール</button>
       </div>
     </div>
     <div id="event-overlay">
