--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <p id="reward-message">報酬ボールを選んでね</p>
       <div id="reward-buttons">
         <button class="reward-button" data-type="split"><img src="image/split_ball.png" alt="スプリットボール">スプリットボール</button>
-        <button class="reward-button" data-type="heal"><img src="image/recovery_ball.png" alt="回復ボール">回復ボール</button>
+        <button class="reward-button" data-type="heal"><img src="image/recovery_ball.png" alt="ヒールボール">ヒールボール</button>
         <button class="reward-button" data-type="big"><img src="image/big_ball.png" alt="ビッグボール">ビッグボール</button>
       </div>
     </div>
