feat: display coin count in shop

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     </div>
     <div id="shop-overlay">
       <h2>ショップだよ☆</h2>
+      <div id="shop-coin-counter"><img src="image/coin.png" alt="coin"><span id="shop-coin-value">0</span></div>
       <div id="shop-options"></div>
       <button id="shop-close">やめる</button>
     </div>
