feat: add vertical reward button layout

--- a/index.html
+++ b/index.html
@@ -60,9 +60,21 @@
       </div>
       <p id="reward-message">報酬ボールを選んでね</p>
       <div id="reward-buttons">
-        <button class="reward-button" data-type="split"><img src="image/split_ball.png" alt="スプリットボール">スプリットボール</button>
-        <button class="reward-button" data-type="heal"><img src="image/recovery_ball.png" alt="ヒールボール">ヒールボール</button>
-        <button class="reward-button" data-type="big"><img src="image/big_ball.png" alt="ビッグボール">ビッグボール</button>
+        <button class="reward-button" data-type="split">
+          <img src="image/split_ball.png" alt="スプリットボール">
+          <div class="reward-name">スプリットボール</div>
+          <div class="reward-desc">弾が2つに分裂するよ♪</div>
+        </button>
+        <button class="reward-button" data-type="heal">
+          <img src="image/recovery_ball.png" alt="ヒールボール">
+          <div class="reward-name">ヒールボール</div>
+          <div class="reward-desc">当たるとHP回復するよ☆</div>
+        </button>
+        <button class="reward-button" data-type="big">
+          <img src="image/big_ball.png" alt="ビッグボール">
+          <div class="reward-name">ビッグボール</div>
+          <div class="reward-desc">弾がでかくなるよ☆</div>
+        </button>
       </div>
     </div>
     <div id="event-overlay">
