feat: add enemy attack countdown

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
           <div id="hp-text">200</div>
         </div>
       </div>
-      <img id="enemy-girl" src="image/enemy_normal.png" alt="敵の女の子">
+      <div id="enemy-image-wrapper">
+        <img id="enemy-girl" src="image/enemy_normal.png" alt="敵の女の子">
+        <div id="enemy-attack-timer"></div>
+      </div>
     </div>
     <div id="victory-overlay">
       <img id="victory-img" src="image/enemy_defete.png" alt="倒された女の子">
