--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </div>
     <div id="victory-overlay">
-      <img id="victory-img" src="image/enemy_defete.png" alt="倒された女の子">
+      <img id="victory-img" src="image/enemy_defeat.png" alt="倒された女の子">
       <button id="retry-button">リトライ</button>
     </div>
     <div id="reward-overlay">
