feat: add penetration ball

--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
           <div class="reward-name">ビッグボール</div>
           <div class="reward-desc">弾がでかくなるよ☆</div>
         </button>
+        <button class="reward-button" data-type="penetration">
+          <img src="image/penetration_ball.png" alt="ペネトレーションボール">
+          <div class="reward-name">ペネトレーションボール</div>
+          <div class="reward-desc">敵を貫通するよ♡</div>
+        </button>
       </div>
     </div>
     <div id="event-overlay">
