--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <button id="start-button" class="menu-option">スタート</button>
         <button id="upgrade-menu-button" class="menu-option">アップグレード</button>
         <button id="reset-progress" class="menu-option">進捗リセット</button>
+        <button id="settings-button" class="menu-option">設定</button>
       </div>
       <div id="upgrade-buttons">
         <div id="xp-display">経験値: <span id="xp-value">0</span></div>
@@ -104,6 +105,10 @@
       <button id="game-over-retry-button">リトライ</button>
     </div>
     <div id="reload-overlay">リロード中…</div>
+    <div id="settings-overlay">
+      <h2 id="settings-title">設定</h2>
+      <button id="settings-close">閉じる</button>
+    </div>
     <div id="credit-overlay">
       <p>Bomb icon by Freepik - Flaticon</p>
       <p><a href="https://www.flaticon.com/free-icons/coin" title="coin icons">Coin icons created by popo2021 - Flaticon</a></p>
