--- a/index.html
+++ b/index.html
@@ -105,8 +105,13 @@
       <button id="game-over-retry-button">リトライ</button>
     </div>
     <div id="reload-overlay">リロード中…</div>
-    <div id="settings-overlay">
+  <div id="settings-overlay">
       <h2 id="settings-title">設定</h2>
+      <label for="language-select" id="language-label">言語</label>
+      <select id="language-select">
+        <option value="ja">日本語</option>
+        <option value="en">English</option>
+      </select>
       <button id="settings-close">閉じる</button>
     </div>
     <div id="credit-overlay">
